--- a/Day7/style.css
+++ b/Day7/style.css
@@ -1,6 +1,6 @@
 body{
     overflow: hidden;
-    background-image: url(bg.jpg);
+    background-image: url(Images/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     
